# rana

./: .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  README.md  README.zh-CN.md  RELEASE_NOTE.md  pyproject.toml
docs/: 0.3.1版本规划.md  0.3.2b版本规划.md  0.3.2d版本规划.md  0.3.2版本规划.md  roadmap.md  ux-requirements-analyzer-design.md
rana/: SKILL.md  config.yaml
rana/assets/: analysis-template-full.md  analysis-template-quick.md  analysis-template.md
rana/references/: _archived-stage-1-guideline.md  _archived-stage-2-guideline.md  _archived-stage-3-guideline.md  _archived-traceability-guide.md  analysis-methods.md  chapter-priority.md  collaboration-protocol.md  p0-gates.md  quality-validator.md  stage-1-diagnosis.md  stage-1-guideline.md  stage-2-solution.md  stage-3-guideline.md  stage-3-refine.md  workflow-full-mode-guideline.md  workflow-quick-mode-guideline.md
rana/scripts/: quality-validator.py
rana/templates/: clarification-list.md
ref/: 输出参考.md
scripts/: build-mattermost-payload.sh  build-release-payload.sh  generate-changelog.sh  sync-wiki.sh
test-runs/: test-report.md
test-runs/test-a-normal/: change-log.md  final-analysis.md  gap-analysis.md  input-structured.md  quality-report.md
test-runs/test-b-edge/: change-log.md  final-analysis.md  gap-analysis.md  input-structured.md  quality-report.md
test-runs/test-c-multi-feature/: change-log.md  final-analysis.md  (+3 more)
ux-requirement-analysis/: SKILL.md
ux-requirements-analyzer/: SKILL.md
wiki/: Home.md  ci-cd-retrospective.md  draft.txt  wiki.md
架构图/: rana-workflow-v0.4.html  rana-workflow.html
(+98 files in other folders)
