[project]
name = "requirements-analysis"
version = "0.1.0"

[project.optional-dependencies]
dev = ["pdfplumber>=0.11"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]
exclude = ["tests/fixtures/", ".ruff_cache/"]
